@@ -3,6 +3,7 @@ Name
 
 AdvanceCOMP Version 1.19 2014/03
 	) Limited the iterations number to 255 with the -3 option.
+	) Added a new -k, --keep-file-time option to advzip [Marco Banfi].
 
 AdvanceCOMP Version 1.18 2013/11
 	) Added build support for new powerpc architectures.
