@@ -11,6 +11,9 @@ AdvanceCOMP Version 1.19 2014/03
 <li>
 Limited the iterations number to 255 with the -3 option.
 </li>
+<li>
+Added a new -k, --keep-file-time option to advzip [Marco Banfi].
+</li>
 </ul>
 <h2> 
 AdvanceCOMP Version 1.18 2013/11
